CLI: suppress a few warnings on JDK 24+
See KT-76111, KT-76799, IDEA-370928.

 #KT-76111 Fixed